# nix-pytorch-test

./: LICENSE  README.md  flake.nix  pyproject.toml
