[tool.poetry]
name = "nix-pytorch-test"
version = "0.1.0"
description = ""
authors = ["Daniel Wheeler <daniel.wheeler2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
toolz = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
